# StoreFront

./: .gitignore  pyproject.toml
likes/: models.py
playground/: urls.py  views.py
playground/templates/: hello.html
store/: models.py
storefront/: settings.py
tags/: models.py
